[project]
name = "SimLogger"
version = "0.3.0"
readme = "README.md"
authors = [{ name = "Joey Kilgore", email = "joey.a.kilgore@gmail.com"}]
dependencies = [
    "pandas",
    "plotly",
    "figurl",
    "GitPython"
]

[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "pre-commit"
]
doc = [
    "sphinx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
