[project]
name = "SimLogger"
description = "Simplify scientific data logging"
version = "0.4.0"
readme = "README.md"
authors = [{ name = "Joey Kilgore", email = "joey.a.kilgore@gmail.com"}]
dependencies = [
    "pandas",
    "plotly",
    "figurl",
    "GitPython",
    "notify_run"
]

[project.url]
Homepage = "https://joey-kilgore.github.io/SimLogger/index.html"
Source = "https://github.com/joey-kilgore/SimLogger"
Tracker = "https://github.com/joey-kilgore/SimLogger/issues"

[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "pre-commit"
]
doc = [
    "sphinx",
    "sphinx-rtd-theme"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
